--- a/package.json
+++ b/package.json
@@ -9,19 +9,43 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
+    "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.0.3",
+    "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
+    "fs": "^0.0.1-security",
+    "lucide-react": "^0.352.0",
+    "mongoose": "^8.2.1",
+    "multer": "^1.4.5-lts.1",
+    "next": "14.1.3",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "react-hook-form": "^7.51.0",
+    "react-resizable-panels": "^2.0.12",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "typescript": "^5"
   }
 }
